--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <h1><a href="#main">2023 WEB PORTFOLIO</a></h1>
+        <!-- <h1><a href="#main">2023 WEB PORTFOLIO</a></h1> -->
     </header>
     <nav class="gnb">
         <ul>
@@ -35,12 +35,25 @@
     </nav>
 
     <main class="main">
-        <div class="section">
-            <div class="f_inner">
-                <div class="slogan">하이하이</div>
+        <div class="section mainsec">
+
+            <div class="box">
+                <svg viewBox="0 0 1320 300">
+                    <text x="37%" y="20%" dy=".35em" text-anchor="middle">
+                        front-end
+                    </text>
+                    <text x="50%" y="60%" dy=".35em" text-anchor="middle">
+                        web developer
+                    </text>
+                </svg>
+                <div class="slogan">
+                    &copy; 2023 KIMSOHEE PORTFOLIO
+                </div>
             </div>
+
+
         </div>
-        <div class="section">
+        <!-- <div class="section">
             <div class="f_inner">
                 <div class="content">
                     <div class="case">
@@ -50,9 +63,10 @@
 
                 <div class="description">description</div>
             </div>
-        </div>
+        </div> -->
         <div class="section">
             <div class="inner">
+
                 <div class="b_left">
                     <div class="item">
                         <div class="mokup">
@@ -62,15 +76,17 @@
                 </div>
                 <div class="b_right">
                     <div class="desc">
-                        <h3>엽기떡볶이</h3>
-                        <dl>
-                            <dt>TYPE</dt>
-                            <dd>스탠다드 웹디자인</dd>
-                            <dt>TOOLS</dt>
-                            <dd></dd>
-                            <dt>기여도</dt>
-                            <dd>개인작업 100%</dd>
-                        </dl>
+                        <div class="box02">
+                            <h3>엽기떡볶이</h3>
+                            <dl>
+                                <dt>TYPE</dt>
+                                <dd>Standard Web</dd>
+                                <dt>TOOLS</dt>
+                                <dd>HTML, CSS, JQUERY</dd>
+                                <dt>기여도</dt>
+                                <dd>개인작업 100%</dd>
+                            </dl>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,7 +116,7 @@
     </div>
 
     <div class="toTop">
-        <a href="#main">up</a>
+        <a href="#main"></a>
     </div>
 </body>
 
